--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -19,7 +19,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
 
     - name: Add requirements
-      run: python -m pip install --upgrade wheel setuptools tox
+      run: python -m pip install --upgrade wheel setuptools tox tox-gh-actions
 
     - name: Test
       run: python3 -m tox
