--- a/sample/ground_state_search/input.yml
+++ b/sample/ground_state_search/input.yml
@@ -3,9 +3,9 @@ system:
 
     # Spin size configuration
     spin_size:
-        uniform: 1 # 1 for uniform spin size, 0 for non-uniform
+        uniform: 0 # 1 for uniform spin size, 0 for non-uniform
         S: 1/2 # Spin size (used only if uniform is 1)
-        # Si_file: spins_sizes.dat # File containing spin sizes per site (used if uniform is 0)
+        Si_file: spins_sizes.dat # File containing spin sizes per site (used if uniform is 0)
 
     # Exchange coupling for the XXZ or XYZ model
     model:
@@ -13,24 +13,42 @@ system:
         Jij_file: coupling_feature.dat # Pair-variable file containing J_{i,j}, Δ_{i,j}  or Jx_{i,j}, Jy_{i,j}, Jz_{i,j}
 
     # External magnetic field settings
-    magnetic_field:
-        active: 0 # 1 for adding magnetic field, 0 for no magnetic field
-        axis: X # Axis of the magnetic field (X, Y, or Z)
+    MF_X:
+        active: 1 # 1 for adding magnetic field, 0 for no magnetic field
         uniform: 0 # 1 for uniform magnetic field, 0 for non-uniform
         h: 1.0 # Magnetic field size (used if uniform is 1)
-        hi_file: magnetic_field_per_site.dat # Site-variable file for non-uniform magnetic field (used if uniform is 0)
+        hi_file: MF.dat # Site-variable file for non-uniform magnetic field (used if uniform is 0)
+
+    MF_Y:
+        active: 0 # 1 for adding magnetic field, 0 for no magnetic field
+        uniform: 0 # 1 for uniform magnetic field, 0 for non-uniform
+        h: 1.0 # Magnetic field size (used if uniform is 1)
+        hi_file: MF.dat # Site-variable file for non-uniform magnetic field (used if uniform is 0)
+
+    MF_Z:
+        active: 0 # 1 for adding magnetic field, 0 for no magnetic field
+        uniform: 0 # 1 for uniform magnetic field, 0 for non-uniform
+        h: 1.0 # Magnetic field size (used if uniform is 1)
+        hi_file: MF.dat # Site-variable file for non-uniform magnetic field (used if uniform is 0)
 
     # Single-ion anisotropy settings
-    single_ion_anisotropy:
+    SIA:
         active: 0 # 1 for adding single-ion anisotropy, 0 for none
         uniform: 1 # 1 for uniform anisotropy, 0 for non-uniform
         D: 0.3 # Anisotropy value (used if uniform is 1)
         # Di_file: anisotropy_per_site.dat # Site-variable file for non-uniform anisotropy (used if uniform is 0)
 
     # DM interaction settings
-    DM_interaction:
+    DM_X:
         active: 0 # 1 for adding DM interaction, 0 for none
-        axis: Z
+        DM_file: DM.dat # Pair-variable file containing DM interaction values
+
+    DM_Y:
+        active: 0 # 1 for adding DM interaction, 0 for none
+        DM_file: DM.dat # Pair-variable file containing DM interaction values
+
+    DM_Z:
+        active: 0 # 1 for adding DM interaction, 0 for none
         DM_file: DM.dat # Pair-variable file containing DM interaction values
 
 numerics:
