--- a/sample/gss_random_test/input_test2_4a.yml
+++ b/sample/gss_random_test/input_test2_4a.yml
@@ -14,25 +14,24 @@ system:
 
     # External magnetic field settings
     MF_X:
-        active: 0 # 1 for adding magnetic field, 0 for no magnetic field
+        active: 1 # 1 for adding magnetic field, 0 for no magnetic field
         uniform: 0 # 1 for uniform magnetic field, 0 for non-uniform
         hi_file: MFx.dat # Site-variable file for non-uniform magnetic field (used if uniform is 0)
 
     MF_Y:
-        active: 0 # 1 for adding magnetic field, 0 for no magnetic field
+        active: 1 # 1 for adding magnetic field, 0 for no magnetic field
         uniform: 0 # 1 for uniform magnetic field, 0 for non-uniform
         hi_file: MFy.dat # Site-variable file for non-uniform magnetic field (used if uniform is 0)
 
     MF_Z:
-        active: 0 # 1 for adding magnetic field, 0 for no magnetic field
+        active: 1 # 1 for adding magnetic field, 0 for no magnetic field
         uniform: 0 # 1 for uniform magnetic field, 0 for non-uniform
         hi_file: MFz.dat # Site-variable file for non-uniform magnetic field (used if uniform is 0)
 
     # Single-ion anisotropy settings
     SIA:
-        active: 0 # 1 for adding single-ion anisotropy, 0 for none
+        active: 1 # 1 for adding single-ion anisotropy, 0 for none
         uniform: 0 # 1 for uniform anisotropy, 0 for non-uniform
-        # D: 0.3 # Anisotropy value (used if uniform is 1)
         Di_file: Di.dat # Site-variable file for non-uniform anisotropy (used if uniform is 0)
 
     # DM interaction settings
@@ -58,49 +57,19 @@ numerics:
         active: 0 # 1 for active, 0 for inactive
         magnetization: 0 # Total magnetization (used if U(1) symmetry is active)
     initial_bond_dimension: 4
-    max_bond_dimensions: [10, 20, 40] # Maximum bond dimension for each repetition
-    max_num_sweeps: [20, 5, 5]
+    max_bond_dimensions: [20, 40, 80] # Maximum bond dimension for each repetition
+    max_num_sweeps: [20, 10, 10]
     truncation_error: 1e-10
-    energy_convergence_threshold: 1e-7
-    entanglement_convergence_threshold: 1e-7
+    energy_convergence_threshold: 1e-8
+    entanglement_convergence_threshold: 1e-8
     energy_degeneracy_threshold: 1e-14
     entanglement_degeneracy_threshold: 0.1
 
 output:
-    dir: data_XYZ1111000
-    basic_file: basic.csv
-    single_site_file: single_site.csv
-    two_site_file: two_site.csv
-
-    energy:
-        active: 1
-    entanglement:
-        active: 1
-    error:
-        active: 1
+    dir: data
+    basic:
+        file: basic.csv
     single_site:
-        Sx:
-            active: 1
-        Sy:
-            active: 1
-        Sz:
-            active: 1
+        file: single_site.csv
     two_site:
-        SxSx:
-            active: 1
-        SySy:
-            active: 1
-        SzSz:
-            active: 1
-        SySz:
-            active: 1
-        SzSy:
-            active: 1
-        SzSx:
-            active: 1
-        SxSz:
-            active: 1
-        SxSy:
-            active: 1
-        SySx:
-            active: 1
+        file: two_site.csv
