--- a/sample/ground_state_search_u1/input_test.yml
+++ b/sample/ground_state_search_u1/input_test.yml
@@ -12,6 +12,8 @@ system:
 numerics:
     init_tree: 0
     opt_structure: 0
+    U1_symmetry:
+        magnitude: 0
     initial_bond_dimension: 4
     max_bond_dimensions: [100, 100] # Maximum bond dimension for each repetition
     max_num_sweeps: [1, 5]
