--- a/sample/ground_state_search_u1/input_test.yml
+++ b/sample/ground_state_search_u1/input_test.yml
@@ -1,5 +1,5 @@
 system:
-    N: 15 # Number of spins
+    N: 16 # Number of spins
     # Spin size configuration
     spin_size:
         S: 1/2 # Spin size (used only if uniform is 1)
@@ -9,12 +9,15 @@ system:
         type: XXZ # Choose XXZ or XYZ
         file: coupling_feature.dat # Pair-variable file containing J_{i,j}, Δ_{i,j}  or Jx_{i,j}, Jy_{i,j}, Jz_{i,j}
 
+    DM_Z:
+        file: DMz.dat
+
 numerics:
     init_tree: 0
     opt_structure: 0
     U1_symmetry:
-        magnetization: 1/2
-    initial_bond_dimension: 64
+        magnetization: 0
+    initial_bond_dimension: 10
     max_bond_dimensions: [80, 90] # Maximum bond dimension for each repetition
     max_num_sweeps: [1, 1]
     energy_convergence_threshold: 1e-8
