--- a/sample/factorize_tensor/input.yml
+++ b/sample/factorize_tensor/input.yml
@@ -1,15 +1,15 @@
 target: input_data/quantum_state_standard.npy
 
 numerics:
-    initial_bond_dimension: 20
-    entanglement_convergence_threshold: 1e-7
+    initial_bond_dimension: 5
+    opt_structure: 0
     fidelity:
         opt_structure: 1
         init_random: 0
-        max_bond_dimensions: [20, 20, 40] # Maximum bond dimension for each repetition
-        max_num_sweeps: [15, 10, 2]
+        max_bond_dimensions: [10, 20, 30] # Maximum bond dimension for each repetition
+        max_num_sweeps: [1, 1, 1]
         truncation_error: 1e-10
         fidelity_convergence_threshold: 1e-8
 
 output:
-    dir: data
+    dir: opt_struct
