--- a/sample/factorize_tensor/input_ttn.yml
+++ b/sample/factorize_tensor/input_ttn.yml
@@ -5,10 +5,10 @@ numerics:
     fidelity:
         opt_structure: 1
         init_random: 0
-        max_bond_dimensions: [10, 20, 30] # Maximum bond dimension for each repetition
-        max_num_sweeps: [1, 1, 1]
+        max_bond_dimensions: [5, 10, 15] # Maximum bond dimension for each repetition
+        max_num_sweeps: [20, 10, 5]
         truncation_error: 1e-10
         fidelity_convergence_threshold: 1e-8
 
 output:
-    dir: opt_struct
+    dir: TTN
