--- a/sample/factorize_tensor/input_mps.yml
+++ b/sample/factorize_tensor/input_mps.yml
@@ -5,10 +5,11 @@ numerics:
     fidelity:
         opt_structure: 0
         init_random: 0
-        max_bond_dimensions: [5, 10, 15] # Maximum bond dimension for each repetition
-        max_num_sweeps: [20, 10, 5]
+        max_bond_dimensions: [10, 20] # Maximum bond dimension for each repetition
+        max_num_sweeps: [20, 10]
         truncation_error: 1e-10
         fidelity_convergence_threshold: 1e-8
+        entanglement_convergence_threshold: 1e-8
 
 output:
     dir: MPS
