--- a/sample/ground_state_search/XXZ/input.yml
+++ b/sample/ground_state_search/XXZ/input.yml
@@ -17,8 +17,8 @@ numerics:
     energy_degeneracy_threshold: 1e-13
     entanglement_degeneracy_threshold: 0.01
     opt_structure:
-        type: 2
-        # beta: [0.01, 0.02] # if type is 1, beta is set by this values and structure is chosen stochastically. that is always 0 by default (select always minimum EE)..
+        type: 1
+        temperature: [0.01, 0.001] # if type is 1, temperature is set by this values and structure is chosen stochastically. that is always 0 by default (select always minimum EE)..
 
 output:
     dir: data_nonopt
