--- a/.gitignore
+++ b/.gitignore
@@ -168,3 +168,15 @@ cython_debug/
 
 docs/run_build.sh
 sample-dev
+
+sample/factorize_tensor/input_data_reduction_test/
+sample/factorize_tensor/input_data_test/
+sample/factorize_tensor/make_reduction_testdata.py
+sample/factorize_tensor/make_testdata.py
+sample/factorize_tensor/normal_distribution_data/
+sample/factorize_tensor/show_edges.py
+sample/factorize_tensor/standard_normal_distribution.yml
+sample/factorize_tensor/standard_ttn_reduction.yml
+sample/factorize_tensor/test_ttn.yml
+sample/factorize_tensor/test_ttn_reduction.yml
+sample/reconstruction/normal_distribution_data/
