--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -27,7 +27,7 @@ jobs:
               run: |
                   uv venv .venv
                   source .venv/bin/activate
-                  uv pip install --r pyproject.toml
+                  uv pip install -r pyproject.toml
                   uv pip install --extra dev -r pyproject.toml
 
             - name: Run tests
