--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 requires-python = ">=3.9"
 
 dependencies = [
-  "numpy == 1.23.5",
+  "numpy >= 1.24",
   "tensornetwork",
   "networkx",
   "matplotlib",
