--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "ttnopt"
 version = "0.1.0"
 description = "A Python package for tree tensor network algorithms"
 authors = [
-  { name = "Ryo Watanabe" },
+  { name = "Ryo Watanabe", email = "u293494e@ecs.osaka-u.ac.jp" },
   { name = "Hidetaka Manabe", email = "manabe@acs.i.kyoto-u.ac.jp" }
 ]
 license = { text = "Apache-2.0" }
@@ -11,7 +11,6 @@ requires-python = ">=3.9"
 readme = "README.md"
 dependencies = [
   "numpy >= 1.24",
-  "jaxlib < 0.4.34",
   "tensornetwork",
   "networkx",
   "matplotlib",
