--- a/sample/factorize_tensor/standard_mps.yml
+++ b/sample/factorize_tensor/standard_mps.yml
@@ -1,5 +1,5 @@
 target:
-    dir: input_data/quantum_state_standard.npy
+    tensor: input_data/quantum_state_standard.npy
 numerics:
     initial_bond_dimension: 4
     max_truncation_error: 0.0
@@ -7,10 +7,11 @@ numerics:
         opt_structure:
             type: 1
         init_random: 0
-        max_bond_dimensions: [4, 8, 16] # Maximum bond dimension for each repetition
-        max_num_sweeps: [100, 50, 25]
+        max_bond_dimensions: [2, 4, 8] # Maximum bond dimension for each repetition
+        max_num_sweeps: [10, 5, 2]
         fidelity_convergence_threshold: 1e-10
         entanglement_convergence_threshold: 1e-14
 
 output:
     dir: MPS_
+    tensors: 1
