--- a/sample/factorize_tensor/standard_ttn.yml
+++ b/sample/factorize_tensor/standard_ttn.yml
@@ -1,4 +1,5 @@
-target: input_data/quantum_state_standard.npy
+target:
+    tensor: input_data/quantum_state_standard.npy
 numerics:
     initial_bond_dimension: 4
     fidelity:
@@ -6,10 +7,11 @@ numerics:
             type: 1
         init_random: 0
         max_bond_dimensions: [4, 8, 16] # Maximum bond dimension for each repetition
--        max_num_sweeps: [100, 50, 25]
+        max_num_sweeps: [100, 50, 25]
         truncation_error: 0.0
         fidelity_convergence_threshold: 1e-10
         entanglement_convergence_threshold: 1e-14
 
 output:
-    dir: TTN_standard
+    dir: TTN_
+    tensors: 1
