--- a/sample/ground_state_search/hierarchical/α=1.0/input.yml
+++ b/sample/ground_state_search/hierarchical/α=1.0/input.yml
@@ -1,8 +1,7 @@
 system:
     N: 256 # Number of spins
     # Spin size configuration
-    spin_size:
-        S: 1/2 # Spin size (used only if uniform is 1)
+    spin_size: 1/2 # Spin size (used only if uniform is 1)
 
     # Exchange coupling for the XXZ or XYZ model
     model:
@@ -11,7 +10,6 @@ system:
 
 numerics:
     init_tree: 0
-    opt_structure: 0
     initial_bond_dimension: 4
     max_bond_dimensions: [20] # Maximum bond dimension for each repetition
     max_num_sweeps: [50]
@@ -19,8 +17,11 @@ numerics:
     entanglement_convergence_threshold: 1e-10
     energy_degeneracy_threshold: 1e-13
     entanglement_degeneracy_threshold: 0.1
+    opt_structure:
+        type: 1
+        temperature: [0.01, 0.001] # if type is 1, temperature is set by this values and structure is chosen stochastically. that is always 0 by default (select always minimum EE)..
 
 output:
-    dir: MPS
+    dir: TTN
     single_site: 1
     two_site: 1
