--- a/sample/ground_state_search/XYZ/input.yml
+++ b/sample/ground_state_search/XYZ/input.yml
@@ -17,7 +17,7 @@ numerics:
     energy_convergence_threshold: 1e-11
     entanglement_convergence_threshold: 1e-10
     energy_degeneracy_threshold: 1e-13
-    entanglement_degeneracy_threshold: 0.1
+    entanglement_degeneracy_threshold: 1e-8
 
 output:
     dir: data
